--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Platform Maker</title>
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src ="Engine/webgl-obj-loader.js"></script>
+    <script type="text/javascript" src="Engine/webglUtils.js"></script>
+    <script type="module" src="Engine/TWGL/twgl.js"></script>
     <script type="text/javascript" src="Engine/utils.js"></script>
-    <script type="text/javascript" src="Engine/webgl-obj-loader.min.js"></script>
+    <script type="module" src="Engine/TWGL/m4.js"></script>
+    <script type="module" src="Engine/TWGL/v3.js"></script>
+    <script type="module" src="Engine/TWGL/primitives.js"></script>
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
@@ -17,3 +22,7 @@
     </div>
 </body>
 </html>
+
+
+<!--     <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
+         <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
