First semi-working version of blocks and map classes. Added the mapHandler class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Platform Maker</title>
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="index.js"></script>
+    <script type="module" src="Engine/globals.js"></script>
+    <script type="module" src="index.js"></script>
     <script type="text/javascript" src ="Engine/webgl-obj-loader.js"></script>
     <script type="text/javascript" src="Engine/webglUtils.js"></script>
     <script type="module" src="Engine/TWGL/twgl.js"></script>
