--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Platform Maker</title>
     <link rel="stylesheet" href="index.css">
-    <script type="module" src="Engine/globals.js"></script>
-    <script type="module" src="index.js"></script>
     <script type="text/javascript" src ="Engine/webgl-obj-loader.js"></script>
     <script type="text/javascript" src="Engine/webglUtils.js"></script>
     <script type="module" src="Engine/TWGL/twgl.js"></script>
@@ -13,13 +11,60 @@
     <script type="module" src="Engine/TWGL/m4.js"></script>
     <script type="module" src="Engine/TWGL/v3.js"></script>
     <script type="module" src="Engine/TWGL/primitives.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
-    <div class="menu">
+    <div class="menu" hidden="hidden">
         <label class="menu_title">Platform Maker</label><br>
         <button class="menu_button">Play</button>
         <button class="menu_button">Create</button>
+    </div>
+    <div class='gui-container'>
+        <div class='gui-element'>
+            <div class="gui-subgroup-text">Camera</div>
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">cameraX</div>
+            <div id="cameraX_value" class="gui-slider-value">0</div>
+            <input id="cameraX_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">cameraY</div>
+            <div id="cameraY_value" class="gui-slider-value">0</div>
+            <input id="cameraY_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">cameraZ</div>
+            <div id="cameraZ_value" class="gui-slider-value">0</div>
+            <input id="cameraZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">fieldOfView</div>
+            <div id="fieldOfView_value" class="gui-slider-value">0</div>
+            <input id="fieldOfView_slider" class="gui-slider" type="range" min="0" max="200" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-subgroup-text">Direct light</div>
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">dirTheta</div>
+            <div id="dirTheta_value" class="gui-slider-value">0</div>
+            <input id="dirTheta_slider" class="gui-slider" type="range" min="0" max="180" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">dirPhi</div>
+            <div id="dirPhi_value" class="gui-slider-value">0</div>
+            <input id="dirPhi_slider" class="gui-slider" type="range" min="-180" max="180" value="0">
+        </div>
+        <div class='gui-element'>
+            <div class="gui-subgroup-text">Ambient</div>
+        </div>
+        <div class='gui-element'>
+            <div class="gui-slider-text">ambientLight</div>
+            <div id="ambientLight_value" class="gui-slider-value">0</div>
+            <input id="ambientLight_slider" class="gui-slider" type="range" min="0" max="100" value="0">
+        </div>
     </div>
 </body>
 </html>
