--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src ="Engine/webgl-obj-loader.js"></script>
     <script type="text/javascript" src="Engine/webglUtils.js"></script>
+    <script type="text/javascript" src="Engine/settings.js"></script>
     <script type="module" src="Engine/TWGL/twgl.js"></script>
     <script type="text/javascript" src="Engine/utils.js"></script>
     <script type="module" src="Engine/TWGL/m4.js"></script>
     <script type="module" src="Engine/TWGL/v3.js"></script>
     <script type="module" src="Engine/TWGL/primitives.js"></script>
     <script type="module" src="index.js"></script>
+
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
@@ -72,3 +74,5 @@
 
 <!--     <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
          <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
+
+<script type="module" src="Engine/SkyBox.js"></script>
