--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <script type="module" src="Engine/TWGL/m4.js"></script>
     <script type="module" src="Engine/TWGL/v3.js"></script>
     <script type="module" src="Engine/TWGL/primitives.js"></script>
-    <script type="module" src="index.js"></script>
-
+    <script type="module" src="main.js"></script>
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
-    <div class="menu" hidden="hidden">
+    <div class="menu">
         <label class="menu_title">Platform Maker</label><br>
         <button class="menu_button">Play</button>
-        <button class="menu_button">Create</button>
+        <button class="menu_button" onclick="location.href='create.html'">Create</button>
     </div>
     <div class='gui-container'>
         <div class='gui-element'>
