Input and horizontal movement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <canvas id="canvas">Not working canvas</canvas>
     <div class="menu">
         <label class="menu_title">Platform Maker</label><br>
-        <button class="menu_button">Play</button>
+        <button class="menu_button" onclick="location.href='play.html'">Play</button>
         <button class="menu_button" onclick="location.href='create.html'">Create</button>
     </div>
     <div class='gui-container'>
@@ -73,5 +73,3 @@
 
 <!--     <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
          <script type="text/glsl" src="Graphics/Shaders/vs.glsl"></script>
-
-<script type="module" src="Engine/SkyBox.js"></script>
