--- a/create.html
+++ b/create.html
@@ -20,7 +20,7 @@
         <label>x: </label>
         <input id="newX" name="x" type="number" value="0"><br>
         <label>y: </label>
-        <input id="newY" name="y" type="number" value="0"><br>
+        <input id="newY" name="y" type="number" value="0" min="0"><br>
         <label>type: </label>
         <select id="newType" name="type">
             <option value="0">Brick</option>
