Collision and lighting fix

--- a/play.html
+++ b/play.html
@@ -12,11 +12,12 @@
     <script type="module" src="Engine/TWGL/m4.js"></script>
     <script type="module" src="Engine/TWGL/v3.js"></script>
     <script type="module" src="Engine/TWGL/primitives.js"></script>
+    <script type="text/javascript" src="Engine/collisions.js"></script>
     <script type="module" src="play.js"></script>
 </head>
 <body>
 <canvas id="canvas">Not working canvas</canvas>
-<div class="menu">
+<div class="menu" hidden>
     <label class="menu_title">Platform Maker</label><br>
     <button class="menu_button" onclick="location.href='index.html'">Back</button>
 </div>
