Game logic first implementation

--- a/play.html
+++ b/play.html
@@ -17,6 +17,9 @@
 </head>
 <body>
 <canvas id="canvas">Not working canvas</canvas>
+<div id="backContainer" class="button_container">
+    <button onclick="location.href='index.html'">Back</button>
+</div>
 <div class="menu" hidden>
     <label class="menu_title">Platform Maker</label><br>
     <button class="menu_button" onclick="location.href='index.html'">Back</button>
