--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
-    <div class="menu">
+    <div id="mode" class="menu" hidden>
         <label class="menu_title">Platform Maker</label><br>
-        <button class="menu_button" onclick="location.href='play.html'">Play</button>
+        <button class="menu_button" onclick="location.href='play.html'">Select Map and Play</button>
         <button class="menu_button" onclick="location.href='create.html'">Create</button>
+    </div>
+    <div id="select" class="menu">
+        <label class="menu_title">Select Map</label><br>
+        <table class="maps_table">
+            <tr>
+                <td>ID</td>
+                <td>Name</td>
+                <td>&nbsp;</td>
+            </tr>
+        </table>
     </div>
     <div class='gui-container'>
         <div class='gui-element'>
