Camera presets implemented

--- a/play.html
+++ b/play.html
@@ -13,6 +13,7 @@
     <script type="module" src="Engine/TWGL/v3.js"></script>
     <script type="module" src="Engine/TWGL/primitives.js"></script>
     <script type="text/javascript" src="Engine/collisions.js"></script>
+    <script type="text/javascript" src="Engine/settings.js"></script>
     <script type="module" src="play.js"></script>
 </head>
 <body>
