--- a/play.html
+++ b/play.html
@@ -21,9 +21,10 @@
 <div id="backContainer" class="button_container">
     <button onclick="location.href='index.html'">Back</button>
 </div>
-<div class="menu" hidden>
-    <label class="menu_title">Platform Maker</label><br>
-    <button class="menu_button" onclick="location.href='index.html'">Back</button>
+<div id="game_over_menu" class="menu" hidden>
+    <label class="menu_title">YOU LOST</label><br>
+    <button class="menu_button" onclick="location.href='play.html'">Play Again</button>
+    <button class="menu_button" onclick="location.href='index.html'">Back to Main Menu</button>
 </div>
 </body>
 </html>
