Death Screen and Restart Game

--- a/play.html
+++ b/play.html
@@ -23,8 +23,8 @@
 </div>
 <div id="game_over_menu" class="menu" hidden>
     <label class="menu_title">YOU LOST</label><br>
-    <button class="menu_button" onclick="location.href='play.html'">Play Again</button>
-    <button class="menu_button" onclick="location.href='index.html'">Back to Main Menu</button>
+    <button id="play_again_button">Play Again</button>
+    <button id="back_to_menu" onclick="location.href='index.html'">Back to Main Menu</button>
 </div>
 </body>
 </html>
