Create page forgotten in last commit

--- a/create.html
+++ b/create.html
@@ -17,6 +17,8 @@
     <div class="create-container">
         <label>Last block x: <span id="lastX">0</span></label><br>
         <label>Last block y: <span id="lastY">0</span></label><br>
+        <label>Name: </label>
+        <input id="newName" name="x" type="text"><br>
         <label>x: </label>
         <input id="newX" name="x" type="number" value="0"><br>
         <label>y: </label>
@@ -32,7 +34,9 @@
             <option value="6">SquareIsland</option>
             <option value="7">Tree</option>
         </select><br>
-        <button id="createButton">CREATE</button>
+        <button id="createButton">CREATE</button><br>
+        <button id="undoButton">UNDO</button><br>
+        <button id="saveButton">SAVE MAP</button>
     </div>
 </body>
 </html>
