--- a/create.html
+++ b/create.html
@@ -38,5 +38,8 @@
         <button id="undoButton">UNDO</button><br>
         <button id="saveButton">SAVE MAP</button>
     </div>
+    <audio loop autoplay>
+        <source src="Game/Music/create.mp3">
+    </audio>
 </body>
 </html>
