--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             </tr>
         </table>
     </div>
+    <audio loop autoplay>
+        <source src="Game/Music/main.mp3">
+    </audio>
 </body>
 </html>
 
