--- a/create.html
+++ b/create.html
@@ -26,12 +26,15 @@
         <label>type: </label>
         <select id="newType" name="type">
             <option value="0">Brick</option>
-            <option value="1">Hedge</option>
-            <option value="2">Cloud</option>
             <option value="3">CylinderIsland</option>
+            <option value="6">SquareIsland</option>
+        </select>
+        <input id="checkbox" type="checkbox" value="1">Hedge<br>
+        <label>decoration: </label>
+        <select id="newDecoration" name="decoration">
+            <option value="-1"></option>
             <option value="4">Mountain</option>
             <option value="5">Rock</option>
-            <option value="6">SquareIsland</option>
             <option value="7">Tree</option>
         </select><br>
         <button id="createButton">CREATE</button><br>
