Create sliders for camera

--- a/play.html
+++ b/play.html
@@ -26,5 +26,11 @@
         <button id="play_again_button">Play Again</button>
         <button id="back_to_menu" onclick="location.href='index.html'">Back to Main Menu</button>
     </div>
+    <div id="life_display" class="life_display">
+
+    </div>
+    <audio loop autoplay>
+        <source src="Game/Music/playEDgy.mp3">
+    </audio>
 </body>
 </html>
