--- a/create.html
+++ b/create.html
@@ -41,6 +41,84 @@
         <button id="undoButton">UNDO</button><br>
         <button id="saveButton">SAVE MAP</button>
     </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">cameraX</div>
+        <div id="cameraX_value" class="gui-slider-value">0</div>
+        <input id="cameraX_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraX');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">cameraY</div>
+        <div id="cameraY_value" class="gui-slider-value">0</div>
+        <input id="cameraY_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraY');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">cameraZ</div>
+        <div id="cameraZ_value" class="gui-slider-value">0</div>
+        <input id="cameraZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraZ');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">fieldOfView</div>
+        <div id="fieldOfView_value" class="gui-slider-value">0</div>
+        <input id="fieldOfView_slider" class="gui-slider" type="range" min="0" max="200" value="0" oninput="onSliderChange(this.value, 'fieldOfView');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-subgroup-text">Point light</div>
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">PosX</div>
+        <div id="posX_value" class="gui-slider-value">0</div>
+        <input id="posX_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posX');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">PosY</div>
+        <div id="posY_value" class="gui-slider-value">0</div>
+        <input id="posY_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posY');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">PosZ</div>
+        <div id="posZ_value" class="gui-slider-value">0</div>
+        <input id="posZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posZ');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">lightDecay</div>
+        <div id="lightDecay_value" class="gui-slider-value">0</div>
+        <input id="lightDecay_slider" class="gui-slider" type="range" min="0" max="180" value="0" oninput="onSliderChange(this.value, 'lightDecay');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">lightTarget</div>
+        <div id="lightTarget_value" class="gui-slider-value">0</div>
+        <input id="lightTarget_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'lightTarget');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-subgroup-text">Direct light</div>
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">dirTheta</div>
+        <div id="dirTheta_value" class="gui-slider-value">0</div>
+        <input id="dirTheta_slider" class="gui-slider" type="range" min="0" max="180" value="0" oninput="onSliderChange(this.value, 'dirTheta');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">dirPhi</div>
+        <div id="dirPhi_value" class="gui-slider-value">0</div>
+        <input id="dirPhi_slider" class="gui-slider" type="range" min="-180" max="180" value="0" oninput="onSliderChange(this.value, 'dirPhi');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-subgroup-text">Ambient</div>
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">ambientLight</div>
+        <div id="ambientLight_value" class="gui-slider-value">0</div>
+        <input id="ambientLight_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'ambientLight');">
+    </div>
+    <div class='gui-element'>
+        <div class="gui-subgroup-text">Specular</div>
+    </div>
+    <div class='gui-element'>
+        <div class="gui-slider-text">shiness</div>
+        <div id="shiness_value" class="gui-slider-value">0</div>
+        <input id="shiness_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'shiness');">
+    </div>
+    </div>
     <audio loop autoplay>
         <source src="Game/Music/create.mp3">
     </audio>
