Create VictoryPole added

--- a/create.html
+++ b/create.html
@@ -28,8 +28,9 @@
             <option value="0">Brick</option>
             <option value="3">CylinderIsland</option>
             <option value="6">SquareIsland</option>
-        </select>
-        <input id="checkbox" type="checkbox" value="1">Hedge<br>
+        </select><br>
+        <input id="checkboxH" type="checkbox" value="1">Hedge
+        <input id="checkboxV" type="checkbox" value="9">VictoryPole<br>
         <label>decoration: </label>
         <select id="newDecoration" name="decoration">
             <option value="-1"></option>
