Flagpole in main

--- a/play.html
+++ b/play.html
@@ -26,6 +26,11 @@
         <button id="play_again_button">Play Again</button>
         <button id="back_to_menu" onclick="location.href='index.html'">Back to Main Menu</button>
     </div>
+    <div id="win_menu" class="menu" hidden>
+        <label class="menu_title">YOU LOST</label><br>
+        <button id="play_pain_button">Play Again</button>
+        <button id="back_tu_menu" onclick="location.href='index.html'">Back to Main Menu</button>
+    </div>
     <div id="life_display" class="life_display">
 
     </div>
