--- a/play.html
+++ b/play.html
@@ -27,7 +27,7 @@
         <button id="back_to_menu" onclick="location.href='index.html'">Back to Main Menu</button>
     </div>
     <div id="win_menu" class="menu" hidden>
-        <label class="menu_title">YOU LOST</label><br>
+        <label class="menu_title">YOU WON</label><br>
         <button id="play_pain_button">Play Again</button>
         <button id="back_tu_menu" onclick="location.href='index.html'">Back to Main Menu</button>
     </div>
