Easter egg plus play fixed

--- a/play.html
+++ b/play.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <canvas id="canvas">Not working canvas</canvas>
-    <div id="backContainer" class="button_container">
+    <div id="backContainer">
         <button onclick="location.href='index.html'">Back</button>
     </div>
     <div id="game_over_menu" class="menu" hidden>
@@ -34,8 +34,8 @@
     <div id="life_display" class="life_display">
 
     </div>
-    <audio loop autoplay>
-        <source src="Game/Music/playEDgy.mp3">
+    <audio id="audio" loop autoplay>
+        <source src="Game/Music/play.mp3">
     </audio>
 </body>
 </html>
