--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </table>
     </div>
     <div id="maps" class="menu" hidden>
+        <label class="menu_title">Map Deletion</label>
         <table id="maps_reset_table" class="maps_table">
-            <label class="menu_title">Map Deletion</label><br>
             <tr>
                 <td>ID</td>
                 <td>Name</td>
@@ -59,7 +59,7 @@
         <button id="reset_maps_button" class="noselect">Reset Maps</button>
     </div>
     <audio loop autoplay>
-        <source src="Game/Music/main.mp3">
+        <source src="Assets/Music/main.mp3">
     </audio>
 </body>
 </html>
