--- a/play.html
+++ b/play.html
@@ -5,15 +5,9 @@
     <title>Platform Maker Play</title>
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src ="Engine/webgl-obj-loader.js"></script>
-    <script type="text/javascript" src="Engine/webglUtils.js"></script>
     <script type="text/javascript" src="Engine/settings.js"></script>
-    <script type="module" src="Engine/TWGL/twgl.js"></script>
     <script type="text/javascript" src="Engine/utils.js"></script>
-    <script type="module" src="Engine/TWGL/m4.js"></script>
-    <script type="module" src="Engine/TWGL/v3.js"></script>
-    <script type="module" src="Engine/TWGL/primitives.js"></script>
     <script type="text/javascript" src="Engine/collisions.js"></script>
-    <script type="text/javascript" src="Engine/settings.js"></script>
     <script type="module" src="play.js"></script>
 </head>
 <body>
@@ -35,7 +29,7 @@
 
     </div>
     <audio id="audio" loop autoplay>
-        <source src="Game/Music/play.mp3">
+        <source src="Assets/Music/play.mp3">
     </audio>
 </body>
 </html>
