--- a/create.html
+++ b/create.html
@@ -58,22 +58,22 @@
         <div class='gui-element'>
             <div class="gui-slider-text">cameraX</div>
             <div id="cameraX_value" class="gui-slider-value">0</div>
-            <input id="cameraX_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraX');">
+            <input id="cameraX_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">cameraY</div>
             <div id="cameraY_value" class="gui-slider-value">0</div>
-            <input id="cameraY_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraY');">
+            <input id="cameraY_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">cameraZ</div>
-            <div id="cameraZ_value" class="gui-slider-value">0</div>
-            <input id="cameraZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'cameraZ');">
+            <div id="cameraZ_value" class="gui-slider-value">200</div>
+            <input id="cameraZ_slider" class="gui-slider" type="range" min="-300" max="300" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">fieldOfView</div>
-            <div id="fieldOfView_value" class="gui-slider-value">0</div>
-            <input id="fieldOfView_slider" class="gui-slider" type="range" min="0" max="200" value="0" oninput="onSliderChange(this.value, 'fieldOfView');">
+            <div id="fieldOfView_value" class="gui-slider-value">60</div>
+            <input id="fieldOfView_slider" class="gui-slider" type="range" min="0" max="200" value="60">
         </div>
         <div class='gui-element'>
             <div class="gui-subgroup-text">Point light</div>
@@ -81,27 +81,27 @@
         <div class='gui-element'>
             <div class="gui-slider-text">PosX</div>
             <div id="posX_value" class="gui-slider-value">0</div>
-            <input id="posX_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posX');">
+            <input id="posX_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">PosY</div>
             <div id="posY_value" class="gui-slider-value">0</div>
-            <input id="posY_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posY');">
+            <input id="posY_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">PosZ</div>
             <div id="posZ_value" class="gui-slider-value">0</div>
-            <input id="posZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0" oninput="onSliderChange(this.value, 'posZ');">
+            <input id="posZ_slider" class="gui-slider" type="range" min="-100" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">lightDecay</div>
             <div id="lightDecay_value" class="gui-slider-value">0</div>
-            <input id="lightDecay_slider" class="gui-slider" type="range" min="0" max="180" value="0" oninput="onSliderChange(this.value, 'lightDecay');">
+            <input id="lightDecay_slider" class="gui-slider" type="range" min="0" max="180" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">lightTarget</div>
             <div id="lightTarget_value" class="gui-slider-value">0</div>
-            <input id="lightTarget_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'lightTarget');">
+            <input id="lightTarget_slider" class="gui-slider" type="range" min="0" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-subgroup-text">Direct light</div>
@@ -109,20 +109,20 @@
         <div class='gui-element'>
             <div class="gui-slider-text">dirTheta</div>
             <div id="dirTheta_value" class="gui-slider-value">0</div>
-            <input id="dirTheta_slider" class="gui-slider" type="range" min="0" max="180" value="0" oninput="onSliderChange(this.value, 'dirTheta');">
+            <input id="dirTheta_slider" class="gui-slider" type="range" min="0" max="180" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">dirPhi</div>
             <div id="dirPhi_value" class="gui-slider-value">0</div>
-            <input id="dirPhi_slider" class="gui-slider" type="range" min="-180" max="180" value="0" oninput="onSliderChange(this.value, 'dirPhi');">
+            <input id="dirPhi_slider" class="gui-slider" type="range" min="-180" max="180" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-subgroup-text">Ambient</div>
         </div>
         <div class='gui-element'>
             <div class="gui-slider-text">ambientLight</div>
-            <div id="ambientLightValue" class="gui-slider-value">0</div>
-            <input id="ambientLight_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'ambientLight');">
+            <div id="ambientLight_value" class="gui-slider-value">0</div>
+            <input id="ambientLight_slider" class="gui-slider" type="range" min="0" max="100" value="0">
         </div>
         <div class='gui-element'>
             <div class="gui-subgroup-text">Specular</div>
@@ -130,7 +130,7 @@
         <div class='gui-element'>
             <div class="gui-slider-text">shininess</div>
             <div id="shininess_value" class="gui-slider-value">0</div>
-            <input id="shininess_slider" class="gui-slider" type="range" min="0" max="100" value="0" oninput="onSliderChange(this.value, 'shininess');">
+            <input id="shininess_slider" class="gui-slider" type="range" min="0" max="100" value="0">
         </div>
     </div>
     <audio loop autoplay>
